--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
-    "@reduxjs/toolkit": "^2.2.7",
+    "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.59.0",
     "@types/nodemailer": "^6.4.16",
     "@wix/data": "^1.0.158",
@@ -69,6 +69,7 @@
     "sonner": "^1.5.0",
     "stripe": "^17.1.0",
     "tailwind-merge": "^2.5.3",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.0.0",
     "zod": "^3.24.1"
